--- a/src/components/layout/header/styles.module.scss
+++ b/src/components/layout/header/styles.module.scss
@@ -153,6 +153,10 @@
   transition: right 0.4s ease;
   padding-top: 80px;
 
+  @media (max-width: 992px) {
+    width: 400px;
+  }
+
   &.active {
     right: 0;
   }
