--- a/src/components/layout/footer/footer.scss
+++ b/src/components/layout/footer/footer.scss
@@ -42,9 +42,13 @@
 		left: 50%;
 		top: -40%;
 		transform: translateX(-50%);
+		@media (max-width: 1024px) {
+			display: block;
+		}
 	}
 }
 .footer-banner {
+	width: 100%;
 	max-width: 1240px;
 	@media (max-width: 1280px) {
 		width: calc(100% - 40px);
@@ -101,7 +105,6 @@
 			font-weight: 400;
 			line-height: 110%;
 			letter-spacing: 0px;
-			text-align: center;
 		}
 		@media (max-width: 640px) {
 			padding: 15px 0;
@@ -176,6 +179,11 @@
 		font-weight: 400;
 		line-height: 21.6px;
 		resize: none;
+		outline: none;
+		&::placeholder {
+			color: rgba(153, 153, 153, 0.7);
+			font-size: 16px;
+		}
 
 		@media (max-width: 1024px) {
 			width: 100%;
@@ -210,6 +218,10 @@
 			line-height: 18px;
 			letter-spacing: 0%;
 			text-align: left;
+			&::placeholder {
+				color: rgba(153, 153, 153, 0.7);
+				font-size: 16px;
+			}
 
 			@media (max-width: 640px) {
 				padding: 10px;
@@ -218,19 +230,32 @@
 	}
 }
 .bunner-inner {
+	flex: 1 0 70%;
+	@media (max-width: 1024px) {
+		flex: 1 0 100% !important;
+	}
 	// .bunner-inner__img
 
 	&__img {
-		display: flex;
-		justify-content: center;
-		align-items: center;
+		flex: 0 0 auto;
+		display: block;
+		margin: auto 0;
 		@media (max-width: 1024px) {
 			display: none;
 		}
+
 		img {
 			@media (max-width: 1170px) {
-				width: 115%;
-				height: 115%;
+				width: 85%;
+				height: 85%;
+			}
+			@media (max-width: 1120px) {
+				width: 80%;
+				height: 80%;
+			}
+			@media (max-width: 1080px) {
+				width: 65%;
+				height: 65%;
 			}
 		}
 	}
