--- a/src/components/main-page/Hero/styles.module.scss
+++ b/src/components/main-page/Hero/styles.module.scss
@@ -275,10 +275,10 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: start;
-	gap: 60px;
+	gap: 50px;
 
 	@media (max-width: 1600px) {
-		padding: 50px;
+		// padding: 50px;
 	}
 
 	@media (max-width: 1450px) {
@@ -289,6 +289,7 @@
 		gap: 40px;
 	}
 	@media (max-width: 1024px) {
+		gap: 30px;
 	}
 }
 
@@ -398,6 +399,7 @@
 	}
 
 	form {
+		position: relative;
 		display: flex;
 		gap: 20px;
 
@@ -432,24 +434,112 @@
 	button {
 		padding: 10px 40px;
 		border-radius: 30px;
-		border: none;
+		border: 1px solid #ffffff;
 		background-color: #ff9933;
 		color: white;
 		font-size: 18px;
 		font-weight: 500;
 		font-family: Roboto, sans-serif;
-		cursor: pointer;
 		transition: background-color 0.3s;
-
-		&:hover {
-			background-color: #e68a29;
-		}
-
 		@media (max-width: 1450px) {
 			padding: 15px 30px;
 		}
 		@media (max-width: 1200px) {
 			padding: 5px 20px;
 		}
+	}
+}
+.hero_form__checkbox {
+	position: absolute;
+	bottom: -40px;
+	left: 10px;
+	display: flex;
+	align-items: center;
+	gap: 10px;
+
+	input {
+		// Убираем стандартные стили
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		appearance: none;
+
+		// ФИКСИРУЕМ РАЗМЕРЫ
+		width: 20px !important; // в данном случае можно использовать !important
+		height: 20px !important;
+		min-width: 20px;
+		min-height: 20px;
+		flex: none;
+		flex-shrink: 0;
+
+		// Базовые стили
+		border: 2px solid #ddd;
+		border-radius: 4px;
+		background: white;
+		position: relative;
+		cursor: pointer;
+		box-sizing: border-box;
+		display: inline-block;
+		margin: 0;
+		padding: 0;
+
+		&:checked {
+			background-color: var(--accent-color1);
+			border-color: #ffffff;
+
+			&::after {
+				content: '';
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -60%) rotate(45deg);
+				width: 6px;
+				height: 12px;
+				border: solid white;
+				border-width: 0 2px 2px 0;
+			}
+		}
+	}
+
+	p {
+		font-size: 12px;
+		font-weight: 400;
+		line-height: 1;
+		font-family: Roboto, sans-serif;
+		color: #494857;
+	}
+
+	span {
+		color: var(--layer-color2);
+	}
+}
+
+.button_active {
+	padding: 10px 40px;
+	border-radius: 30px;
+	border: 1px solid #ffffff;
+	background-color: #ff9933;
+	color: white;
+	font-size: 18px;
+	font-weight: 500;
+	font-family: Roboto, sans-serif;
+	cursor: pointer;
+	transition: background-color 0.3s;
+	box-shadow: 0 6px 20px rgba(255, 153, 51, 0.4);
+
+	&:hover {
+		background-color: #e68a29;
+		transform: translateY(-2px);
+		box-shadow: 0 6px 20px rgba(255, 153, 51, 0.4);
+	}
+
+	&:active {
+		transform: translateY(0);
+		box-shadow: 0 2px 10px rgba(255, 153, 51, 0.3);
+	}
+	@media (max-width: 1450px) {
+		padding: 15px 30px;
+	}
+	@media (max-width: 1200px) {
+		padding: 5px 20px;
 	}
 }
